@@ -21,6 +21,7 @@ Improved Debugging:
 -added setting to dump .zsf snapshot when a cpu panic is fired
 Improved Hex editor: can now copy to a different memory zone
 Improved menu: can now use PgUp,PgDn to jump between menu items
+Improved Debug CPU Window: can now resize height and have more debug lines
 
 Improved assembler: added defs command
 Improved AY Sheet: now you can select which AY Chip to show
